more suitable .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-
-# Project property files
-.actionScriptProperties
-.flexProperties
-.settings/
-.project
+settings_local.py*
+*.pyc
+media/upload/*
+media/cache/*
+database.sqlite
+*.pyc
+*~
